# compiler

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  out  run.sh
.github/workflows/: std-release.yml
examples/: hello_world.pl  loops.pl  main.pl  memory.jl  memory.pl  other.pl  sdl_example.pl  structs.jl  structs.pl  syntax  syntax.pl  third.pl
examples/std/: io.pl  memory.pl
examples/test/: other.pl
src/: ast.cpp  ast.h  compiler.cpp  compiler.h  generator.cpp  generator.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
std/: io.jl  sdl.pl
